--- a/week_3/index.html
+++ b/week_3/index.html
@@ -4,8 +4,92 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Week-3</title>
+  <style>
+    body{
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+    }
+    form{
+      width: 100%;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 30px;
+      
+    }
+    #countries{
+      width: 20vw;
+      padding: 0.5rem;
+      border-radius: 0.8rem;
+      font-size: 1rem;
+    }
+    #result{
+      font-size: 2rem;
+      color: black;
+      font-weight: bolder;
+    }
+  </style>
 </head>
 <body>
-  
+  <form action="">
+    <select name="countries" id="countries" onchange="fn()">
+      <option value="">Please select country</option>
+      <option value="India" >India</option>
+      <option value="United Kingdom" >United Kingdom</option>
+      <option value="Russia">Russia</option>
+      <option value="Germany">Germany</option>
+      <option value="France">France</option>
+    </select>
+    <div id="result"></div>
+  </form>
+
+  <script>
+    function fn(){
+      var x = document.getElementById('countries').selectedIndex;
+      let capitals= document.getElementsByTagName('Option')[x].value;
+      let dd=document.getElementById('result');
+
+      if(capitals == 'India'){
+        // console.log("New Delhi")
+        dd.innerHTML = "New Delhi"
+        document.body.style.backgroundImage="url('https://images.unsplash.com/photo-1705219900008-4bea2740f837?q=80&w=2035&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')"
+        document.body.style.backgroundSize='95rem'
+        document.body.style.backgroundPosition= "center center"
+        document.body.style.backgroundRepeat='no-repeat'        
+      } else if(capitals == 'United Kingdom'){
+        // console.log("London")
+        dd.innerHTML = "London"
+        document.body.style.backgroundImage="url('https://images.unsplash.com/photo-1533929736458-ca588d08c8be?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')"
+        document.body.style.backgroundSize='95rem'
+        document.body.style.backgroundPosition= "center center"
+        document.body.style.backgroundRepeat='no-repeat'
+      }else if(capitals == 'Russia'){
+        // console.log("Moscow")
+        dd.innerHTML = "Moscow"
+        document.body.style.backgroundImage="url('https://images.unsplash.com/photo-1596484552834-6a58f850e0a1?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')"
+        document.body.style.backgroundSize='95rem'
+        document.body.style.backgroundPosition= "center center"
+        document.body.style.backgroundRepeat='no-repeat'
+      }else if(capitals == 'Germany'){
+        // console.log("Berlin")
+        dd.innerHTML = "Berlin"
+        document.body.style.backgroundImage="url('https://plus.unsplash.com/premium_photo-1661962435210-e6cdbb2cbeb4?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')"
+        document.body.style.backgroundSize='95rem'
+        document.body.style.backgroundPosition= "center center"
+        document.body.style.backgroundRepeat='no-repeat'
+      }else if(capitals == 'France'){
+        // console.log("Paris")
+        dd.innerHTML = "Paris"
+        document.body.style.backgroundImage="url('https://images.unsplash.com/photo-1502602898657-3e91760cbb34?q=80&w=2073&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')"
+        document.body.style.backgroundSize='95rem'
+        document.body.style.backgroundPosition= "center center"
+        document.body.style.backgroundRepeat='no-repeat'
+      }
+      // console.log(document.getElementsByTagName('Option')[x].value);
+      
+    }
+  </script>
 </body>
 </html>
