long back dont know what it was 02

--- a/wt_Assessment/index.html
+++ b/wt_Assessment/index.html
@@ -11,7 +11,7 @@
         .upp{
             height: 100px;
             /* background-color: red; */
-            border
+            /* border */
         }
         /* .first{ */
             /* display: flex;
@@ -22,12 +22,12 @@
             /* background-color: bisque; */
             /* padding-top: 50px; */
         /* }  */
-        .nav{
+        /* .nav{ */
             /* display: flex;
             align-items: center;
             justify-content:space-around;
             height: 45px; */
-        }
+        /* } */
     </style>
 </head>
 <body>
